--- a/styles/styles.css
+++ b/styles/styles.css
@@ -148,14 +148,14 @@ li {
 
     .header {
         margin-bottom: 25px;
-        max-width: 348px;
+        max-width: 337px;
         font-size: 30px;
         line-height: 32px;
     }
 
     .room_text {
         width: 312px;
-        bottom: 15px;
+        bottom: 23px;
         left: 15px;
         font-size: 16px;
         line-height: 22px;
@@ -231,9 +231,11 @@ li {
     }
 
     .info {
-        max-width: 346px;
+        padding: 0;
+        max-width: 345px;
         font-size: 22px;
         line-height: 30px;
+
     }
 
     .btn {
@@ -311,10 +313,11 @@ li {
     .container_projects {
         width: 100%;
         padding: 0 15px;
-        margin-bottom: 103px;
+        margin-bottom: 104px;
     }
 
     .list__apartment_text {
+        margin-bottom: 7px;
         font-size: 25px;
         line-height: 34px;
     }
@@ -330,12 +333,13 @@ li {
 
 @media (max-width: 767px) {
     .container_projects {
+        margin-bottom: 144px;
         width: 100%;
         padding: 0 12px 0 12px;
     }
 
     .list__apartment_img {
-        margin-bottom: 20px;
+        margin-bottom: 17px;
     }
 
     .projects {
@@ -384,7 +388,7 @@ li {
 }
 
 .services{
-    margin: 0 0 34px 0;
+    margin: 0 0 30px 0;
     font-weight: 400;
     font-size: 18px;
     line-height: 25px;
@@ -398,7 +402,7 @@ li {
 }
 
 .services-wrapper {
-    margin-bottom: 106px;
+    margin-bottom: 100px;
     display: flex;
     flex-wrap: wrap;
     column-gap: 10px;
@@ -412,7 +416,7 @@ li {
 
 .price-img {
     display: inline-flex;
-    padding: 0 20px 0 20px;
+    padding: 0 20px;
     position: absolute;
     top: 31px;
     left: 30px;
@@ -464,7 +468,7 @@ li {
 .services-btn {
     display: block;
     width: 100%;
-    height: 153px;
+    height: 151px;
     font-size: 30px;
     line-height: 41px;
     border: none;
@@ -478,6 +482,7 @@ li {
 @media (max-width: 1199px) {
     .section{ 
         margin-bottom: 117px;
+        padding: 150px 0 120px 0;
         width: 100%;
 
     }
@@ -485,7 +490,9 @@ li {
         width: 100%;
         margin: 0 auto;
         padding: 0 15px;
-    }   
+    }
+    
+    
     .servises__img {
         margin-bottom: 15px;
         height: 315px;
@@ -498,14 +505,20 @@ li {
     .services-wrapper {
         margin-bottom: 80px;
         column-gap: 10px;
-        row-gap: 80px;
+        row-gap: 90px;
     } 
     .price-img {
+        padding: 0 27px;
         font-size: 20px; 
+        left: 32px;
     }
     .list_container__services_text{
         font-size: 25px;
         line-height: 34px;   
+    }
+
+    .services-btn {
+        height: 159px;
     }
 
 }
@@ -521,6 +534,12 @@ li {
         margin: 0 auto;
         width: 100%;
     } 
+
+    .services {
+        margin-bottom: 20px;
+        font-size: 14px;
+        line-height: 19px;
+    }
     .servises__img {
         margin-bottom: 10px;
         height: 240px;
@@ -531,10 +550,11 @@ li {
         position: relative;
     }
     .services-wrapper {
-        margin-bottom: 60px;
-        gap: 60px;
+        margin-bottom: 68px;
+        gap: 66px;
     } 
     .price-img {
+        padding: 0 23px;
         top: 23px;
         left: 24px;
         height: 30px;
@@ -567,25 +587,11 @@ li {
     color: #121212;
 }
 
-.reviews-item:nth-last-child(2n + 1) {
-    max-width: 528px;
-}
-
-.reviews-item:nth-last-child(2n) {
-    max-width: 505px;
-}
-
-.reviews-item:last-child:nth-child(2n + 1) {
-    width: auto;
-    max-width: 861px;
-}
-
-
 .row {
     display: flex;
     flex-wrap: wrap;
-    column-gap: 50px;
-    row-gap: 50px;
+    column-gap: 30px;
+    row-gap: 80px;
 
 }
 
@@ -594,7 +600,12 @@ li {
 
 }
 
+.col-big:last-child {
+    width: 75%;
+}
+
 .reviews-text {
+    width: 100%;
     color: #000000;
 }
 
@@ -624,17 +635,7 @@ li {
         font-size: 20px;
         line-height: 27px;
     }
-    .reviews-item:nth-last-child(2n + 1) {
-        max-width: none;
-    }
     
-    .reviews-item:nth-last-child(2n) {
-        max-width: none;
-    }
-
-    .reviews-item:last-child:nth-child(2n + 1) {
-        max-width: 694px;
-    }
 
     .row {
         column-gap: 10px;
@@ -658,12 +659,20 @@ li {
 
     .row {
         flex-direction: column;
-
+        row-gap: 74px;
     
     }
     .col {
         width: 100%;
     }
+
+    .col-big:last-child {
+        width: 100%;
+    }
+
+    /* .col-big:last-child {
+        width: 100%;
+    } */
     .reviews-header {
         margin-bottom: 10px;
         font-size: 25px;
