--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,9 @@
+@import url(/styles/heading.css);
+@import url(/styles/aboutus.css);
+@import url(/styles/projects.css);
+@import url(/styles/services.css);
+@import url(/styles/reviews.css);
+
 /* *{outline:1px solid red ;
 } */
 /* html {
@@ -23,7 +29,7 @@ div,
 button, 
 ul,
 li {
-    font-family: Manrope, sans-serif;
+    font-family: 'Manrope', sans-serif;
     font-weight: 400;
     letter-spacing: -0.03em;
 }
@@ -82,37 +88,6 @@ li {
     margin-bottom: 150px;
 }
 
-.header{
-    max-width: 956px;
-    font-size: 60px;
-    line-height: 60px;
-    margin-bottom: 30px;
-    color:  #121212;
-
-}
-
-.fons-room {
-    width: 100%;
-    height: 500px;
-    background-image: url('../resources/fons-room.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-}
-
-.room_text {
-    font-size: 20px;
-    line-height: 27px;
-    font-weight: 400;
-    color:  #fff;
-    position: absolute;
-    bottom: 40px;
-    left: 40px;
-    height: 81px;
-    width: 430px;
-    
-}
-
 @media (max-width: 1199px) {
     .container {
         width: 100%;
@@ -120,18 +95,8 @@ li {
         padding: 0 15px;
     }
 
-    .fons-room {
-        height: 400px;
-    }
-
-    .header {
-        max-width: 802px;
-        font-size: 50px;
-        line-height: 60px
-    }
-
-    .room_text {
-        bottom: 30px;
+    .container_tablet{
+        margin-bottom: 100px;
     }
 }
 
@@ -141,552 +106,7 @@ li {
         padding: 0 12px 0 13px;
         margin-bottom: 80px;
     }
-
-    .fons-room {
-        height: 304px;
-    }
-
-    .header {
-        margin-bottom: 25px;
-        max-width: 337px;
-        font-size: 30px;
-        line-height: 32px;
-    }
-
-    .room_text {
-        width: 312px;
-        bottom: 23px;
-        left: 15px;
-        font-size: 16px;
-        line-height: 22px;
-    }
 }
-
-.container-info {
-    margin: 0 auto;
-    width: 1150px;
-    box-sizing: border-box;
-    margin-bottom: 150px;
-}
-
-
-.about-us{
-    font-size: 18px;
-    line-height: 25px;
-    font-weight: 400;
-    color:  #121212;
-    margin-bottom: 30px;
-}
-
-.info {
-    width: 1051px;
-    font-size: 45px;
-    line-height: 61px;
-    font-weight: 400;
-    color:  #121212;
-    margin-bottom: 30px;
-    padding-left: 3px;
-    
-}
-
-.btn {
-    display: block;
-    height: 67px;
-    width: 255px;
-    color: #fff;
-    background-color: #AD1818;
-    border-radius: 5px;
-    text-decoration: none;
-    line-height: 67px;
-    text-align: center;
-    font-size: 20px;
-    
-}
-
-@media (max-width: 1199px) {
-    .container-info {
-        width: 100%;
-        padding: 0 15px;
-        margin-bottom: 120px;
-    }
-
-    .info {
-        max-width: 690px;
-        font-size: 35px;
-        line-height: 48px;
-    }
-}
-
-@media (max-width: 767px) {
-    .container-info {
-        width: 100%;
-        padding: 0 17px 0 12px;
-        margin-bottom: 80px;
-    }
-
-    .about-us {
-        margin-bottom: 20px;
-        font-size: 14px;
-        line-height: 19px;
-    }
-
-    .info {
-        padding: 0;
-        max-width: 345px;
-        font-size: 22px;
-        line-height: 30px;
-
-    }
-
-    .btn {
-        margin-bottom: 80px;
-        width: 100%;
-        height: 51px;
-        font-size: 16px;
-        line-height: 51px;
-    }
-}
-
-
-.container_projects{
-    margin: 0 auto;
-    width: 1150px;
-    margin-bottom: 150px;
-}
-
-
-
-.projects{
-    margin-bottom: 30px;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 25px;
-    color: #121212;
-    text-transform: uppercase;
-}
-
-.list__apartment_img{
-    margin: 0 0 15px 0;
-    width: 100%;
-
-}
-
-.list__apartment_text{
-    margin-bottom: 13px;
-    font-weight: 400;
-    font-size: 30px;
-    line-height: 41px;
-    color: #121212;
-}
-
-.list__apartment_btn{
-    display: block;
-    font-size: 20px;
-    line-height: 27px;
-    color: #AD1818;
-    text-decoration: none;
-    margin-bottom: 90px;
-}
-
-
-
-.allapartment-btn{
-    width: 100%;
-    display: block;
-    height: 153px;
-    border: 1px solid #AD1818;
-    color: #AD1818;
-    text-align: center;
-    font-size: 30px;
-    line-height: 153px;
-    text-decoration: none;
-    border-radius: 5px;
-
-}
-
-.allapartment-btn:hover{
-    background: #AD1818;
-    color: #FFFFFF;
-}
-
-@media (max-width: 1199px) {
-    .container_projects {
-        width: 100%;
-        padding: 0 15px;
-        margin-bottom: 104px;
-    }
-
-    .list__apartment_text {
-        margin-bottom: 7px;
-        font-size: 25px;
-        line-height: 34px;
-    }
-
-    .list__apartment_btn {
-        margin-bottom: 80px;
-    }
-
-    .allapartment-btn {
-        margin-top: 102px;
-    }
-}
-
-@media (max-width: 767px) {
-    .container_projects {
-        margin-bottom: 144px;
-        width: 100%;
-        padding: 0 12px 0 12px;
-    }
-
-    .list__apartment_img {
-        margin-bottom: 17px;
-    }
-
-    .projects {
-        margin-bottom: 20px;
-        font-size: 14px;
-        line-height: 19px;
-    }
-
-    .list__apartment_text {
-         margin-bottom: 11px;
-        font-size: 18px;
-        line-height: 25px;
-    }
-
-    .list__apartment_btn {
-        font-size: 16px;
-        line-height: 22px;
-        margin-bottom: 49px;
-    }
-
-    .allapartment-btn {
-        margin-top: 60px;
-        height: 100px;
-        font-size: 22px;
-        line-height: 100px;
-    }
-
-
-}
-
-
-
-.section{ 
-    margin-bottom: 150px;
-    max-width: 100%;
-    padding: 150px 0 150px 0;
-    background-color: #121212;
-    color:#FFFFFF;
-    display: block;
-}
-
-.container_box{
-    margin: 0 auto;
-    max-width: 1150px;
-   
-}
-
-.services{
-    margin: 0 0 30px 0;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 25px;
-    text-transform: uppercase;
-    
-}
-
-.list_container {
-    width: calc(50% - 5px);
-    position: relative;
-}
-
-.services-wrapper {
-    margin-bottom: 100px;
-    display: flex;
-    flex-wrap: wrap;
-    column-gap: 10px;
-    row-gap: 85px;
-} 
-
-.servises__img {
-    margin-bottom: 25px;
-    height: 389px;
-}
-
-.price-img {
-    display: inline-flex;
-    padding: 0 20px;
-    position: absolute;
-    top: 31px;
-    left: 30px;
-    height: 40px;
-    font-size: 22px;
-    line-height: 40px;
-    text-align: center;
-    background: #AD1818;
-    border-radius: 5px;
-}
-
-.servises__img__planning {
-    background-image: url('../resources/planning.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 50%;
-    
-}
-
-.servises__img__design {
-    background-image: url('../resources/design.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 50%;
-    
-}
-
-.servises__img__author {
-    background-image: url('../resources/author.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 50%;
-}
-
-.servises__img__equipment { 
-    background-image: url('../resources/equipment.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 50%;
-}
-
-
-.list_container__services_text{
-    font-size: 30px;
-    line-height: 41px;
-    
-}
-
-.services-btn {
-    display: block;
-    width: 100%;
-    height: 151px;
-    font-size: 30px;
-    line-height: 41px;
-    border: none;
-    background: #AD1818;
-    border-radius: 5px;
-    color: #FFFFFF;
-    cursor: pointer;
-
-}
-
-@media (max-width: 1199px) {
-    .section{ 
-        margin-bottom: 117px;
-        padding: 150px 0 120px 0;
-        width: 100%;
-
-    }
-    .container_box{
-        width: 100%;
-        margin: 0 auto;
-        padding: 0 15px;
-    }
-    
-    
-    .servises__img {
-        margin-bottom: 15px;
-        height: 315px;
-    }
-    .list_container {
-        width: calc(50% - 5px);
-        position: relative;
-    }
-
-    .services-wrapper {
-        margin-bottom: 80px;
-        column-gap: 10px;
-        row-gap: 90px;
-    } 
-    .price-img {
-        padding: 0 27px;
-        font-size: 20px; 
-        left: 32px;
-    }
-    .list_container__services_text{
-        font-size: 25px;
-        line-height: 34px;   
-    }
-
-    .services-btn {
-        height: 159px;
-    }
-
-}
-
-@media (max-width: 767px) {
-    .section{ 
-        margin-bottom: 80px;
-        min-width: 100%;
-        padding: 80px 0 80px 0;
-    }
-    .container_box{
-        padding: 0 15px;
-        margin: 0 auto;
-        width: 100%;
-    } 
-
-    .services {
-        margin-bottom: 20px;
-        font-size: 14px;
-        line-height: 19px;
-    }
-    .servises__img {
-        margin-bottom: 10px;
-        height: 240px;
-    }
-
-    .list_container {
-        width: 100%;
-        position: relative;
-    }
-    .services-wrapper {
-        margin-bottom: 68px;
-        gap: 66px;
-    } 
-    .price-img {
-        padding: 0 23px;
-        top: 23px;
-        left: 24px;
-        height: 30px;
-        font-size: 14px;
-        line-height: 30px;
-    }
-    .list_container__services_text{
-        font-size: 18px;
-        line-height: 25px;   
-    }
-    .services-btn {
-        height: 100px;
-        font-size: 22px;
-        line-height: 30px;
-    }
-
-}
-
-.reviews {
-    margin: auto;
-    max-width: 1150px;
-    margin-bottom: 157px;
-}
-
-.reviews-tattle {
-    margin-bottom: 30px;
-    font-size: 18px;
-    line-height: 25px;
-    text-transform: uppercase;
-    color: #121212;
-}
-
-.row {
-    display: flex;
-    flex-wrap: wrap;
-    column-gap: 30px;
-    row-gap: 80px;
-
-}
-
-.col {
-    width: calc(50% - 25px);
-
-}
-
-.col-big:last-child {
-    width: 75%;
-}
-
-.reviews-text {
-    width: 100%;
-    color: #000000;
-}
-
-.reviews-header {
-    margin-bottom: 14px;
-    font-size: 45px;
-    line-height: 61px;
-}
-
-.reviews-description {
-    font-size: 22px;
-    line-height: 30px;
-}
-
-@media (max-width: 1199px) {
-    .reviews{
-        max-width: 100%;
-        margin: 0 auto;
-        padding: 0 15px;
-    }
-    .reviews-header {
-        margin-bottom: 25px;
-        font-size: 35px;
-        line-height: 48px;
-    }
-    .reviews-description {
-        font-size: 20px;
-        line-height: 27px;
-    }
-    
-
-    .row {
-        column-gap: 10px;
-        row-gap: 80px;
-    }
-    .col {
-        width: calc(50% - 5px);
-    
-    }
-}
-@media (max-width: 767px) {
-    .reviews{
-        max-width: 100%;
-        margin: 0 auto;
-    }
-    .reviews-tattle {
-        margin-bottom: 22px;
-        font-size: 14px;
-        line-height: 19px;
-    }
-
-    .row {
-        flex-direction: column;
-        row-gap: 74px;
-    
-    }
-    .col {
-        width: 100%;
-    }
-
-    .col-big:last-child {
-        width: 100%;
-    }
-
-    /* .col-big:last-child {
-        width: 100%;
-    } */
-    .reviews-header {
-        margin-bottom: 10px;
-        font-size: 25px;
-        line-height: 34px;    
-    }
-    .reviews-description{
-        font-size: 16px;
-        line-height: 22px;
-    }
-
-}
-
-
-
 /* .image-section {
     min-width: 1400px;
     padding: 0 0 150px 0;
