--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,6 +6,8 @@
 @import '../styles/gallery.css';
 @import '../styles/contacts.css';
 @import '../styles/footer.css';
+@import '../styles/popup.css';
+@import '../styles/nav.css';
 
 /* *{outline:1px solid red ;
 } */
@@ -31,59 +33,15 @@ p,
 div,
 button, 
 ul,
-li {
+li
+input {
     font-family: 'Manrope', sans-serif;
     font-weight: 400;
     letter-spacing: -0.03em;
 }
 
 
-/* .nav-section {
-    margin: 0 auto;
-    width: 1150px;
-}
 
-.container-nav {
-    padding-top: 33px;
-    padding-bottom: 70px;
-    box-sizing: border-box;
-}
-
-.logo-link {
-    display: inline-block;
-    margin-right: 530px;
-    
-}
-
-.logo {
-    display: block;
-    width: 127px;
-    height: 22px;
-    
-}
-
-.nav {
-    float: right;
-}
-
-.nav__link {
-    line-height: 25px;
-    font-size: 18px;
-    text-align: center;
-    color: #121212;
-    text-decoration: none;
-    margin-right: 58px;
-    
-}
-
-.nav__link:hover {
-    opacity: 0.5;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.5);
-}
-
-.last-link {
-    margin-right: 0;
-} */
 
 .container {
     margin: 0 auto;
