--- a/styles/nav.css
+++ b/styles/nav.css
@@ -37,7 +37,10 @@
 
 .nav__link_header:hover {
     opacity: 0.5;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+    text-decoration: underline;
+    text-underline-offset: 7px;
+    text-decoration-thickness: 1px;
+    /* border-bottom: 1px solid rgba(0, 0, 0, 0.5); */
 }
 
 .burger-btn{
@@ -69,8 +72,9 @@
     padding-top: 80px;
     width: 274px;
     height: 100%;
+    overflow-y: auto;
     background-color: #fff;
-    transition: transform 0.4s linear;
+    transition: transform 0.3s linear;
     transform: translateX(100%);
 }
 
@@ -174,7 +178,7 @@
         height: 20px;
         background-image: url("../resources/cross.png");
         background-repeat: no-repeat;
-        background-position: center;
+        background-position: 50%;
 
     }
 
