--- a/styles/popup.css
+++ b/styles/popup.css
@@ -22,7 +22,7 @@
     position: relative;
     width: 777px;
     max-height: 100%;
-    /* overflow-y: scroll; */
+    overflow-y: auto;
     padding: 20px;
     background: #fff;
     border-radius: 10px;
