--- a/styles/styles.css
+++ b/styles/styles.css
@@ -69,6 +69,23 @@ input {
     }
 }
 
+.chapter {
+    margin-bottom: 30px;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 25px;
+    color: #121212;
+    text-transform: uppercase;
+}
+
+@media (max-width: 767px) {
+    .chapter{
+        margin-bottom: 20px;
+        font-size: 14px;
+        line-height: 19px;
+    }
+}
+
 
 
 
