--- a/styles/footer.css
+++ b/styles/footer.css
@@ -3,7 +3,7 @@
     padding: 60px 0 30px 0;
 }
 
-.container__footer {
+.container_box {
     margin: 0 auto;
     max-width: 1150px;
 }
@@ -15,14 +15,14 @@
     padding-left: 13px;   */
 }
 
-.nav {
+.nav__list-black {
     display: flex;
     justify-content: center;
     gap: 55px;
 }
 
 
-.nav__link {
+.nav__link-black {
     display: block;
     /* height: 25px; */
     font-size: 18px;
@@ -38,7 +38,7 @@
     margin-right: 0;
 } */
 
-.nav__link:hover {
+.nav__link-black:hover {
     opacity: 0.5;
 }
 
@@ -61,15 +61,15 @@
         padding: 30px 0 26px 0;
     }
 
-    .container__footer {
+    .container_box {
         width: 100%;
     }
 
-    .nav{
+    .nav__list-black{
         gap: 30px;
     }
 
-    .nav__link {
+    .nav__link-black {
         font-size: 12px;
         line-height: 16px;
     }
