--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -1,13 +1,13 @@
-.section-gallery {
+.gallery {
     width: 100%;
     margin-bottom: 150px;
 }
 
-.gallery {
+.gallery-wrapper {
     position: relative;
 }
 
-.container-box {
+.container-wrapper {
     margin: 0 auto;
     max-width: 1150px;
 }
@@ -128,11 +128,11 @@
 }
 
 @media (max-width: 1199px) {
-    .section-gallery {
+    .gallery {
         margin-bottom: 120px;
     }
 
-    .container-box {
+    .container-wrapper {
         margin: 0 auto;
         padding: 0 50px;
         width: 100%;
@@ -166,11 +166,11 @@
 }
 
 @media (max-width: 767px) {
-    .section-gallery {
+    .gallery {
         margin-bottom: 80px;
     }
 
-    .container-box {
+    .container-wrapper {
         padding: 0 12px;
         width: 100%;
     }
