--- a/styles/heading.css
+++ b/styles/heading.css
@@ -1,4 +1,4 @@
-.heading{
+.heading__text{
     max-width: 956px;
     font-size: 60px;
     line-height: 60px;
@@ -7,7 +7,7 @@
 
 }
 
-.fons-room {
+.heading__fons-room {
     width: 100%;
     height: 500px;
     background-image: url('../resources/fons-room.png');
@@ -16,7 +16,7 @@
     position: relative;
 }
 
-.room_text {
+.heading__text-fons {
     font-size: 20px;
     line-height: 27px;
     font-weight: 400;
@@ -31,36 +31,36 @@
 
 @media (max-width: 1199px) {
 
-    .fons-room {
+    .heading__fons-room {
         height: 400px;
     }
 
-    .heading {
+    .heading__text {
         max-width: 802px;
         font-size: 50px;
         line-height: 60px
     }
 
-    .room_text {
+    .heading__text-fons {
         bottom: 30px;
     }
 }
 
 @media (max-width: 767px) {
 
-    .fons-room {
+    .heading__fons-room {
         height: 304px;
         background-position: 35%;
     }
 
-    .heading {
+    .heading__text {
         margin-bottom: 25px;
         max-width: 337px;
         font-size: 30px;
         line-height: 32px;
     }
 
-    .room_text {
+    .heading__text-fons {
         width: 312px;
         bottom: 23px;
         left: 15px;
