--- a/styles/services.css
+++ b/styles/services.css
@@ -1,4 +1,4 @@
-.section{ 
+.services{ 
     margin-bottom: 151px;
     max-width: 100%;
     padding: 151px 0 150px 0;
@@ -13,7 +13,7 @@
    
 }
 
-.services{
+.chapter-black{
     margin: 0 0 30px 0;
     padding-left: 2px;
     font-weight: 400;
@@ -166,7 +166,7 @@
         width: 100%;
     } 
 
-    .services {
+    .chapter-black {
         margin-bottom: 20px;
         font-size: 14px;
         line-height: 19px;
