--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,6 +21,7 @@ html{
     scroll-behavior: smooth;
 }
 
+
 h1,
 h2,
 h3,
@@ -65,7 +66,7 @@ input {
     }
 }
 
-.chapter {
+.title {
     margin-bottom: 30px;
     font-weight: 400;
     font-size: 18px;
@@ -75,7 +76,7 @@ input {
 }
 
 @media (max-width: 767px) {
-    .chapter{
+    .title {
         margin-bottom: 20px;
         font-size: 14px;
         line-height: 19px;
